Se agrega colab, pendiente el video.

--- a/src_code.ipynb
+++ b/src_code.ipynb
@@ -27,6 +27,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Colab\n",
+    "Para este proyecto se hicieron algunas pruebas en un colab, se deja el link para cualquier referencia: https://colab.research.google.com/drive/1NCZxtU33aa4TDhQk3VcPf3tEEfhoncnM?usp=sharing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Link del vídeo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Metodología o estrategia"
    ]
   },
