Se agrega el link del vídeo de presentación.

--- a/src_code.ipynb
+++ b/src_code.ipynb
@@ -35,15 +35,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Link del vídeo"
+    "## Link del vídeo"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "[Click aquí para ver el vídeo](https://youtu.be/9IzrX_KA6JE)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -70,7 +70,7 @@
     "- Se utilizan expresiones regulares para buscar patrones específicos y contar su ocurrencia.\n",
     "5. **Comparación con Datos Reales:**\n",
     "- Se crea un DataFrame con los datos reales y los datos estimados.\n",
-    "- Pro medio de un gráfico de barras se visualizan y comparan ambos conjuntos de datos."
+    "- Por medio de un gráfico de barras se visualizan y comparan ambos conjuntos de datos."
    ]
   },
   {
@@ -221,10 +221,10 @@
     }
    ],
    "source": [
-    "# Cargar el archivo de texto\n",
+    "# Se carga el archivo de texto\n",
     "with open('data/barcelona_rm.txt', 'r') as file:\n",
     "    lineas = file.readlines()\n",
-    "# Eliminamos algunas palabras clave repetidas en una misma linea\n",
+    "# Se eliminan algunas palabras clave repetidas en una misma linea\n",
     "lineas = eliminar_segunda_ocurrencia(lineas, \"corner\")\n",
     "lineas = eliminar_segunda_ocurrencia(lineas, \"fuera de juego\")\n",
     "# Se ordenan las lineas del archivo (puesto que están en orden inverso)\n",
@@ -300,7 +300,7 @@
    "source": [
     "corpus = ' '.join(corpus)\n",
     "\n",
-    "# Buscar eventos con expresiones regulares\n",
+    "# Se buscan eventos con expresiones regulares\n",
     "patron_gol = re.compile(r'go{2,}l')\n",
     "goles = patron_gol.findall(corpus)\n",
     "remates = len(re.findall(r\"remate\", corpus))\n",
@@ -311,7 +311,7 @@
     "pases_clave = len(re.findall(r\"pase\", corpus))\n",
     "fueras_juego = len(re.findall(r\"fuera_juego\", corpus))\n",
     "\n",
-    "# Mostrar estadísticas\n",
+    "# Se muestran las estadísticas\n",
     "print(f\"Goles: {len(goles)}\")\n",
     "print(f\"Remates: {remates}\")\n",
     "print(f\"Tiros de esquina: {saques_esquina}\")\n",
@@ -378,7 +378,7 @@
     "# Lista de colores\n",
     "colors = ['#1f77b4', '#ff7f0e'] * (len(df_datos.columns) // 2)\n",
     "\n",
-    "# Graficar cada columna con su respectivo color\n",
+    "# Se grafica cada columna con su respectivo color\n",
     "for column, color in zip(df_datos.columns, colors):\n",
     "    ax.bar(column, df_datos[column][0], color=color, label=column)\n",
     "\n",
